--- a/ProjectMaze/MainWindow.xaml
+++ b/ProjectMaze/MainWindow.xaml
@@ -14,12 +14,23 @@
             <ColumnDefinition />
             <ColumnDefinition Width="120"/>
         </Grid.ColumnDefinitions>
-        <Grid Grid.Column="1">
-            <Label Content="{Binding Score}" FontSize="20"/>
-        </Grid>
+        <Border x:Name="rightBorder" Grid.Column="1" Background="White">
+            <Grid Grid.IsSharedSizeScope="True">
+                <StackPanel>
+                    <TextBlock Text="{Binding Points, StringFormat='Очки:  {0}'}" 
+                               FontSize="18"/>
+                    <TextBlock Text="{Binding Steps, StringFormat='Шаги: {0}'}" 
+                               FontSize="18"/>
+                </StackPanel>
+            </Grid>
+        </Border>
+
         <Viewbox>
-            <Border BorderBrush="Black" BorderThickness="1" Visibility="{Binding GenerateWindowVisibility}">
-            <ItemsControl Name="Map" Margin="1">
+            <Border BorderBrush="Black" 
+                    BorderThickness="1" 
+                    Visibility="{Binding GenerateWindowVisibility}">
+            <ItemsControl Name="Map"
+                          Margin="1">
                 <ItemsControl.Background>
                     <ImageBrush ImageSource="src/background.png"/>
                 </ItemsControl.Background>
@@ -33,8 +44,11 @@
                             </ItemsControl.ItemsPanel>
                             <ItemsControl.ItemTemplate>
                                 <DataTemplate DataType="{x:Type local:Cell}">
-                                    <Border Width="{Binding CellWidth}" Height="{Binding CellHeight}" Background="{Binding Background}">
-                                        <Image Source="{Binding File}" Stretch="Fill"/>
+                                    <Border Width="{Binding CellWidth}" 
+                                            Height="{Binding CellHeight}" 
+                                            Background="{Binding Background}">
+                                        <Image Source="{Binding File}" 
+                                               Stretch="Fill"/>
                                     </Border>
                                 </DataTemplate>
                             </ItemsControl.ItemTemplate>
@@ -53,13 +67,22 @@
                 <TextBox Height="30" Width="120"
                          VerticalContentAlignment="Center"
                          KeyDown="CheckOnlyDigitsKeyDown"
-                         Text="{Binding RowsCount, Mode=TwoWay}"/>
+                         Text="{Binding ColumnsCount, Mode=TwoWay}"/>
                 <Label Height="25" Width="120"
                        Content="Высота:"/>
                 <TextBox Height="30" Width="120"
                          VerticalContentAlignment="Center"
                          KeyDown="CheckOnlyDigitsKeyDown"
-                         Text="{Binding ColumnsCount, Mode=TwoWay}"/>
+                         Text="{Binding RowsCount, Mode=TwoWay}"/>
+                <ComboBox Height="30" Width="120"
+                          Text="0"
+                          VerticalContentAlignment="Center"
+                          SelectedItem="0"
+                          SelectedIndex="0">
+                    <ComboBoxItem>Легко</ComboBoxItem>
+                    <ComboBoxItem>Средне</ComboBoxItem>
+                    <ComboBoxItem>Сложно</ComboBoxItem>
+                </ComboBox>
                 <Button Margin="0,10,0,0" 
                         Height="30" Width="120"
                         Content="Сгенерировать"
