--- a/ProjectMaze/MainWindow.xaml
+++ b/ProjectMaze/MainWindow.xaml
@@ -105,7 +105,7 @@
                 <Button Margin="0,10,0,0" 
                         Height="30" Width="120"
                         Content="Сгенерировать"
-                        Click="MapGenerateButton">
+                        Click="GetGeneratedMap">
                 </Button>
             </ListBox>
         </Grid>
